--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
     "date-fns": "^2.28.0",
     "easy-peasy": "^5.0.4",
     "next": "12.0.10",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-day-picker": "^7.4.10",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
