--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
+    "cookies": "^0.8.0",
     "date-fns": "^2.28.0",
     "easy-peasy": "^5.0.4",
     "next": "12.0.10",
